Changes to be commited

--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
                     <div class="profile-data">
 
                         <h2>HariHaran .T</h2>
-                        <p>(Frontend UI Developer)</p>
+                       
                         <p>Incubation Trainee @ <Span style="color:red;">Z</Span> <span style="color: #42AE55;">O</span>
                             <span style="color:rgb(0, 0, 156);">H</span> <span style="color: yellow;">O</span> corp pvt
                             ltd.</p>
+                        <p>(Frontend UI Developer)</p>
                         <a href="mailto:hariharan29220@gmail.com">hariharan29220@gmail.com</a>
                         <p>7418020933</p>
                         <p style="color: rgba(0, 0, 0, 0.726);font-weight: bold;">Github</p>
@@ -256,7 +257,7 @@
 
             <div class="footer-2">
 
-                <a href="https://github.com/hariharandev2020"><span>Github :</span> hariharandev2020</a>
+                <a href="https://github.com/hariharandev2020"><span style="font-size: 1.6rem;">Github :</span> hariharandev2020</a>
                 <p>Mob no: 7418020933</p>
                 <a href="mailto:hariharan29220@gmail.com">Mail : hariharan29220@gmail.com</a>
 
